# doraemon

./: .flake8  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
docs/: index.md
src/nobiru/nn/: __init__.py  linear.py
src/nobiru/nn/activations/: relu.py  sigmoid.py  softmax.py
src/pydoraemon/linear_model/: linear_regression.py
src/pydoraemon/nn/activations/: sigmoid.py
tests/linear_model/: test_linear_regression.py
tests/nn/: test_linear_layer.py
tests/nn/activations/: test_relu.py  test_sigmoid.py  test_softmax.py
