[tool.poetry]
name = "pydoraemon"
version = "0.1.0"
description = ""
authors = ["Domenico Corvasce <dcorvasce@outlook.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "pydoraemon" }]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.2"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
isort = "^5.12.0"
pytest = "^7.4.3"
flake8 = "^6.1.0"
mypy = "^1.7.1"
mkdocs = "^1.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
